--- a/package.json
+++ b/package.json
@@ -35,32 +35,24 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-0": "6.5.0",
-    "chai": "3.5.0",
-    "cheerio": "0.20.0",
-    "coveralls": "2.11.12",
+    "css-loader": "^0.23.1",
     "eslint": "3.15.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-import-resolver-webpack": "0.8.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.9.0",
-    "gitbook-cli": "2.3.0",
-    "istanbul": "1.1.0-alpha.1",
     "jsdom": "9.0.0",
-    "mocha": "2.5.3",
     "postcss-cli": "2.5.2",
+    "postcss-loader": "^1.3.3",
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-hot-loader": "1.3.0",
-    "rimraf": "2.5.4",
-    "sinon": "1.17.5",
-    "sinon-chai": "2.8.0",
+    "style-loader": "^0.13.2",
     "webpack": "1.13.1"
   },
   "dependencies": {
-    "css-modules-require-hook": "~4.0.1",
-    "style-loader": "~0.13.1",
-    "css-loader": "~0.23.1"
+    "css-modules-require-hook": "~4.0.1"
   }
 }
